<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">test</string>
    <string name="your_result">Your Result</string>
    <string name="calculate">Calculate</string>
    <string name="_23">23</string>
    <string name="your_height_in_cm">"  Your Height in Cm:"</string>
    <string name="your_weight_in_kg">"  Your Weight in Kg:"</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="weight_status">   Weight Status</string>
    <string name="weight_description">"Enter your weight in kilograms"</string>
    <string name="height_description">"Enter your height in centimeters"</string>
    <string name="textview">TextView</string>
    <string name="nutrimotion">NutriMotion</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="select_your_goal">Select your goal</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="muscle_gain_bodybuilding">Muscle Gain (Bodybuilding)</string>
    <string name="general_fitness_and_wellness">General Fitness and Wellness</string>
    <string name="enter_your_age">"  Enter your Age:"</string>
    <string name="gender">"  Enter your Gender:"</string>
    <string-array name="Spinner_items">
        <item>Female</item>
        <item>Male</item>
    </string-array>


    <string-array name="Spinner_items_measurements">
        <item>100 g</item>
        <item>1 g</item>
        <item>100 ml</item>
        <item>1 ml</item>
    </string-array>

</resources>