<?xml version="1.0" encoding="utf-8"?>



<!-- BMI Calculator Screen -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BmiCalculatorScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:text="@string/bmi_calculator"
        android:textAllCaps="true"
        android:textColor="#212121"
        android:textSize="26sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:contentDescription="@string/weight_description"
        android:text="@string/your_weight_in_kg"
        android:textColor="#000"


        />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:inputType="numberDecimal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/your_height_in_cm"
        android:textColor="#000" />

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:inputType="numberDecimal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="#F23A506B"
        android:text="@string/calculate"
        android:textColor="#fafafa" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="15dp"
        android:text="@string/your_result"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="26sp"

        />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_23"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/weight_status"
        android:textAlignment="center" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/chart"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/needle"
            android:layout_width="48dp"
            android:layout_height="51dp"
            app:layout_constraintBottom_toBottomOf="@+id/chart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chart"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/sagetuta"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>




























