<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backbtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SetGoalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3A4F6A"
        android:backgroundTint="#3A4F6A"
        android:gravity="center|top"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="150sp"
            android:text="@string/select_your_goal"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="310sp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="50dp"
                tools:ignore="MissingConstraints">


                <RadioButton
                    android:id="@+id/weightlossbtn"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/weightloss_btn"

                    android:button="@null"
                    android:checked="false"
                    android:clickable="true" />

                <RadioButton
                    android:id="@+id/bodybuildingbtn"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="10dp"

                    android:layout_marginEnd="10dp"

                    android:background="@drawable/bodybuilding_btn"
                    android:button="@null"
                    android:clickable="true" />

                <RadioButton
                    android:id="@+id/wellnessbtn"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="16dp"

                    android:background="@drawable/wellness_btn"
                    android:button="@null"
                    android:clickable="true" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="29dp"
                android:layout_marginBottom="60dp"

                android:autoSizeTextType="uniform"
                android:text="@string/weight_loss"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.372"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="108dp"
                android:layout_height="42dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="60dp"
                android:background="#00FFFFFF"
                android:text="@string/muscle_gain_bodybuilding"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="108dp"
                android:layout_height="66dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="40dp"

                android:text="@string/general_fitness_and_wellness"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/photoMaintainWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/photoBulk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/photoLoseWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:text="Next"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/input"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />



        <!-- Next Button -->

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:background="@color/input"
        android:gravity="center"
        android:text="@string/nutrimotion"
        android:textColor="@color/button"

        android:textSize="30sp"
        android:textStyle="bold|italic" />


</RelativeLayout>



























